--- a/ProyectoPOO23030531/Datos/frmpaqueteria.xaml
+++ b/ProyectoPOO23030531/Datos/frmpaqueteria.xaml
@@ -1,27 +1,25 @@
-﻿<Window x:Class="ProyectoPOO23030531.Datos.frmcategorías"
+﻿<Window x:Class="ProyectoPOO23030531.Datos.frmpaqueteria"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ProyectoPOO23030531.Datos"
         mc:Ignorable="d"
-        Title="frmcategorías" Height="450" Width="800">
+        Title="frmpaqueteria" Height="450" Width="800">
     <Grid>
         <Label Content="ID" HorizontalAlignment="Left" Height="27" Margin="108,62,0,0" VerticalAlignment="Top" Width="77"/>
-        <Label Content="Nombre" HorizontalAlignment="Left" Height="26" Margin="108,99,0,0" VerticalAlignment="Top" Width="77"/>
-        <Label Content="Descripción" HorizontalAlignment="Left" Height="26" Margin="108,142,0,0" VerticalAlignment="Top" Width="77"/>
-        <Label Content="Imagen" HorizontalAlignment="Left" Height="28" Margin="108,260,0,0" VerticalAlignment="Top" Width="77"/>
-        <TextBox x:Name="txtID" HorizontalAlignment="Left" Height="18" Margin="204,66,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="82" MaxLength="15"/>
-        <Image HorizontalAlignment="Left" Height="80" Margin="326,240,0,0" VerticalAlignment="Top" Width="80"/>
-        <TextBox x:Name="txtNombre" HorizontalAlignment="Left" Height="18" Margin="204,103,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="196"/>
-        <TextBox x:Name="txtDescripción" HorizontalAlignment="Left" Height="89" Margin="204,146,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="279"/>
+        <Label Content="Nombre" HorizontalAlignment="Left" Height="26" Margin="108,106,0,0" VerticalAlignment="Top" Width="77"/>
+        <TextBox x:Name="txtID" HorizontalAlignment="Left" Height="18" Margin="204,66,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="82" MaxLength="15"/>
+        <TextBox x:Name="txtNombre" HorizontalAlignment="Left" Height="22" Margin="204,110,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="279"/>
+        <Label Content="Telefono" HorizontalAlignment="Left" Height="26" Margin="108,154,0,0" VerticalAlignment="Top" Width="77"/>
+        <TextBox x:Name="txtTelefono" HorizontalAlignment="Left" Height="22" Margin="204,156,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="279"/>
         <ToolBar HorizontalAlignment="Left" Height="31" Margin="10,21,0,0" VerticalAlignment="Top" Width="153">
             <Button x:Name="btngrabar" Height="22" Width="23" Click="btngrabar_Click">
                 <Button.Background>
                     <ImageBrush ImageSource="/Datos/guardar icon.png"/>
                 </Button.Background>
             </Button>
-            <Button x:Name="btnbuscar" Height="29" Width="29" HorizontalAlignment="Left" Click="btnbuscar_Click">
+            <Button x:Name="btnbuscar" Height="29" Width="29" HorizontalAlignment="Left" Click="btnbuscar_Click" >
                 <Button.Background>
                     <ImageBrush ImageSource="/Datos/lupa.png"/>
                 </Button.Background>
@@ -41,7 +39,6 @@
             </MenuItem>
             <MenuItem Header="Salir"/>
         </Menu>
-        <Image HorizontalAlignment="Left" Height="126" Margin="204,260,0,0" VerticalAlignment="Top" Width="158"/>
-
+        
     </Grid>
 </Window>
